syntax = "proto3";

option go_package = ".";

service MigratorService {
    // Tells any migratord to get in client role.
    rpc CreateMigrationJob (CreateMigrationJobRequest) returns (CreateMigrationJobResponse);

    // Migratord with client role invokes it's peer. If works it's peer gets in a server role.
    rpc ShareMigrationJob (ShareMigrationJobRequest) returns (ShareMigrationJobResponse);
}

message CreateMigrationJobRequest {
    string peer_address = 1;
    int32 peer_port = 2;
    string container_id = 3;
}

message CreateMigrationJobResponse {
    bool accepted = 1;
}

message ShareMigrationJobRequest {
    string peer_address = 1;
    int32 peer_port = 2;
    string container_id = 3;
    string container_image = 4;
    string container_name = 5;
}

message ShareMigrationJobResponse {
    string migration_id = 1;
    bool accepted = 2;
    int64 creaton_unix_time = 3;
}