syntax = "proto3";
package v1alpha1;

option go_package = "./";

